--- a/about.html
+++ b/about.html
@@ -11,17 +11,17 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="test.css">
-    <title>ABP - Contact</title>
+    <title>ABP - About ABP</title>
     <script src="navbar.js"></script>
 </head>
 <body>
     <div class="sale">
-        <h2><a class="asale" href="products.html">BIG SALE: 30% off all printers!</a></h2>
+        <h2><a class="asale" href="products">BIG SALE: 30% off all printers!</a></h2>
     </div>
     <div class="topnav" id="myTopnav">
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
-        <a href="products.html"><i class="fas fa-fax"></i> Products</a>
-        <a href="contact.html"><i class="fas fa-user"></i> Contact</a>
+        <a href="index"><i class="fas fa-home"></i> Home</a>
+        <a href="products"><i class="fas fa-fax"></i> Products</a>
+        <a href="contact"><i class="fas fa-user"></i> Contact</a>
         <a class="active"><i class="fas fa-question"></i> About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
