--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
 </head>
 <body>
     <div class="sale">
-      <h2><a class="asale" href="products.html">BIG SALE: 30% off all printers!</a></h2>
+      <h2><a class="asale" href="products">BIG SALE: 30% off all printers!</a></h2>
     </div>
     <div class="topnav" id="myTopnav">
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
-        <a href="products.html"><i class="fas fa-fax"></i> Products</a>
+        <a href="index"><i class="fas fa-home"></i> Home</a>
+        <a href="products"><i class="fas fa-fax"></i> Products</a>
         <a class="active"><i class="fas fa-user"></i> Contact</a>
-        <a href="about.html"><i class="fas fa-question"></i> About</a>
+        <a href="about"><i class="fas fa-question"></i> About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -32,10 +32,11 @@
         <h2>Chris Horvath</h2>
         <p>Position: CFO</p>
         <p><a href="mailto:22CHorvath@tesdk12.net">Email</a></p>
-        <p class="paragraph">
+        <img class="owners"src="/images/Chris.jpg">
         <h2>Matt Flynn</h2>
         <p>Position: Founder</p>
         <p><a href="mailto:24flynnm@tesdk12.net">Email</a></p>
+        <img class="owners"src="/images/Matt.jpg">
         <h2>Jake Albertson</h2>
         <p>Position: CEO</p>
         <p><a href="mailto:22JAlbertsonh@tesdk12.net">Email</a></p>
@@ -43,6 +44,8 @@
         <p>Phone: </p>
         <p><a href="mailto:mteamspam@gmail.com">Email</a></p>
         <p>Address: Conestoga High School 200 Irish Rd, Berwyn, PA  19312</p>
+        <p>Hours: Mon-Fri: 9am-5pm</p>
+        <img class="owners"src="/images/ABP.png">
     </div>
 </body>
 </html>
