--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </head>
 <body>
     <div class="sale">
-      <h2><a class="asale" href="products.html">BIG SALE: 30% off all printers!</a></h2>
+      <h2><a class="asale" href="products">BIG SALE: 30% off all printers!</a></h2>
     </div>
     <div class="topnav" id="myTopnav">
         <a class="active"><i class="fas fa-home"></i> Home</a>
-        <a href="products.html"><i class="fas fa-fax"></i> Products</a>
-        <a href="contact.html"><i class="fas fa-user"></i> Contact</a>
-        <a href="about.html"><i class="fas fa-question"></i> About</a>
+        <a href="products"><i class="fas fa-fax"></i> Products</a>
+        <a href="contact"><i class="fas fa-user"></i> Contact</a>
+        <a href="about"><i class="fas fa-question"></i> About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -30,7 +30,7 @@
       <div style="padding-left:16px;">
         <img class="logo" src="./images/ABP.png">
         <h2>ABP - The printer for you</h2>
-        <p class="paragraph">ABP has been making amazing printers for the past 2 months, and continues to do so. find out about <a href="products.html">Our Products</a> here</p>
+        <p class="paragraph">ABP has been making amazing printers for the past 2 months, and continues to do so. find out about <a href="products">Our Products</a> here</p>
       </div>
 </body>
 </html>
