--- a/products.html
+++ b/products.html
@@ -16,13 +16,13 @@
 </head>
 <body>
     <div class="sale">
-      <h2><a class="asale" href="products.html">BIG SALE: 30% off all printers!</a></h2>
+      <h2><a class="asale" href="products">BIG SALE: 30% off all printers!</a></h2>
     </div>
     <div class="topnav" id="myTopnav">
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="index"><i class="fas fa-home"></i> Home</a>
         <a class="active"><i class="fas fa-fax"></i> Products</a>
-        <a href="contact.html"><i class="fas fa-user"></i> Contact</a>
-        <a href="about.html"><i class="fas fa-question"></i> About</a>
+        <a href="contact"><i class="fas fa-user"></i> Contact</a>
+        <a href="about"><i class="fas fa-question"></i> About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -31,6 +31,7 @@
       <div style="padding-left:16px;">
         <h2>Products</h2>
         <p class="paragraph">Our main product right now is the Lazer Printer™, our new invention that uses no toner or ink, only lasers inside the printer to burn your documents. It is a great way to print documents without the need for toner or ink.</p>
+        <p class="paragraph">Click <a href="sales">here</a> to buy one of our amazing products</p>
       </div>
 </body>
 </html>
