--- a/sales.html
+++ b/sales.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="topnav" id="myTopnav">
-        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="index"><i class="fas fa-home"></i> Home</a>
     </div>
     <div style="padding:16px;">
         <h1>Checkout</h1>
