--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       
     <div style="padding-left:16px;" class="paragraph">
         <h2>Who are we?</h2>
-        <p>We are Amazing Brilliant Printers. Founded in 2021, we have been striving to give the best experience to students and teachers.</p>
+        <p>We are Amazing Brilliant Printers. Founded in 2021, we have been striving to give the best experience to students and teachers alike.</p>
     </div>
     <footer>Created and maintained by <a href="https://www.deafwired.tk/" target="_blank">DeafWired</a></footer>
 </body>
