--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <p>Position: CEO</p>
         <p><a href="mailto:22JAlbertsonh@tesdk12.net">Email</a></p>
         <h2>Company info</h2>
-        <p>Phone: </p>
+        <p>Phone: 610-240-1000</p>
         <p><a href="mailto:mteamspam@gmail.com">Email</a></p>
         <p>Address: Conestoga High School 200 Irish Rd, Berwyn, PA  19312</p>
         <p>Hours: Mon-Fri: 9am-5pm</p>
